# flashies

./: .env  Cargo.toml  Dockerfile  README.md  compose.yml  index.html
migrations/2023-11-12-030322_create_files/: up.sql
migrations/2023-11-12-202713_create_files/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
